<resources>
    <string name="app_name">Organizate</string>

    <string name="title_login">Sign In / Sign Up</string>
    <string name="title_editor">Activity editor</string>
    <string name="title_settings">Settings</string>
    <string name="title_categories">Categories</string>

    <string name="alarm">Alarm</string>

    <string name="name_hint">Event\'s name</string>
    <string name="alarm_hint">Activate alarm</string>
    <string name="place_hint">Event\'s place</string>
    <string name="repeat_hint">Activate repetition</string>
    <string name="duration_hint">Event\'s duration</string>

    <string name="namec_hint">category name</string>
    <string name="color_hint">color</string>

    <string name="category_work">Work</string>
    <string name="category_study">Study</string>
    <string name="category_hoobie">Hoobie</string>
    <string name="category_others">Others</string>
    <string name="about">Organìzate es una aplicaciòn pensada para administrar su tiempo de una forma efectiva, esta busca brindar una forma práctica de llevar su lista de tareas pendientes, actividades y recordatorios con notificaciones y alertas que les permitan manejar mejor su tiempo y realizar oportunamente cada una de ellas. Esta aplicación permite agendar tareas y asignar fecha y tiempo estimado de duración con el cual se estarà alertando las tareas próximas y las que están por terminar</string>
    <string name="desarrollado">Desarrollado por: Santiago Osorio murillo y Daniela Zapata Arroyave</string>
    <string name="email">User\'s email</string>
    <string name="password">User\'s password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>

    <string name="email_password_required">Email &amp; Password are required</string>
    <string name="signin_failed">There\'s an error, please sign in again.</string>
    <string name="signup_failed">There\'s an error, please sign up again.</string>

    <string-array name="options">
        <item>Activities</item>
        <item>Categories</item>
        <item>Sign in/Sign up</item>
        <item>Preferences</item>
        <item>About</item>
    </string-array>

    <string-array name="options_logged">
        <item>Activities</item>
        <item>Categories</item>
        <item>Contacts</item>
        <item>Preferences</item>
        <item>About</item>
        <item>Sign out</item>
    </string-array>

    <string name="hello_blank_fragment">Hello from a blank fragment</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
