<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:discreteseekbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/event_name"
                    android:hint="@string/name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_place_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_name_layout">

                <EditText
                    android:id="@+id/event_place"
                    android:hint="@string/place_hint"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/event_duration_hint"
                android:text="@string/duration_hint"
                android:textSize="@dimen/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_place_layout"
                android:padding="5dp"/>

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/event_duration"
                android:layout_below="@+id/event_duration_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                discreteseekbar:dsb_min="0"
                discreteseekbar:dsb_max="120"
                discreteseekbar:dsb_progressColor="@color/colorAccent"
                discreteseekbar:dsb_indicatorColor="@color/colorAccent"
                discreteseekbar:dsb_rippleColor="@color/colorPrimaryDark"/>

            <RelativeLayout
                android:id="@+id/event_alarm_container"
                android:layout_below="@id/event_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:text="@string/alarm_hint"
                    android:textSize="@dimen/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true" />

                <Switch
                    android:id="@+id/event_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/event_repeat_container"
                android:layout_below="@+id/event_alarm_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:text="@string/repeat_hint"
                    android:textSize="@dimen/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true" />

                <Switch
                    android:id="@+id/event_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_event"
        android:src="@drawable/ic_done"
        android:tint="@color/white"
        android:onClick="addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
